# Adversarial-Search-Haskell

./: .gitignore  CHANGELOG.md  README.md  TFG.cabal  sad.txt
Partidas/: 3enRaya_1.txt  damas_1.txt  damas_2.txt  damas_3.txt  damas_4.txt  damas_5.txt  gato_1.txt  gato_2.txt  gato_3.txt  gato_4.txt  gato_7.txt  temporal.txt
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: TFG-0.1.0.0-inplace.conf  TFG-0.2.0.0-inplace.conf  TFG-0.3.0.0-inplace.conf  TFG-0.4.0.0-inplace.conf  TFG-0.4.0.1-inplace.conf  TFG-0.4.0.2-inplace.conf  TFG-0.4.0.3-inplace.conf  TFG-0.4.0.4-inplace.conf  TFG-0.4.1.0-inplace.conf  TFG-0.4.1.1-inplace.conf  TFG-0.4.2.0-inplace.conf  TFG-0.5.0.0-inplace.conf  TFG-0.5.1.0-inplace.conf  TFG-0.5.2.0-inplace.conf  TFG-0.5.3.0-inplace.conf  TFG-0.5.3.1-inplace.conf  TFG-0.5.4.0-inplace.conf  TFG-0.5.5.0-inplace.conf  TFG-0.5.6.0-inplace.conf  TFG-0.5.7.0-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-9.2.5/: TFG-0.5.7.0-inplace.conf  TFG-1.0.0.0-inplace.conf  package.cache
src/: Funciones3enRaya.hs  FuncionesDamas.hs  FuncionesGato.hs  GuardarCargar.hs  IO3enRaya.hs  IOdamas.hs  IOgato.hs  Interaction.hs  Interconexion.hs  MiniMax.hs  Tipos.hs  Utiles.hs  UtilesGraficos.hs
