cabal-version:      3.0
name:               TFG
version:            1.0.1.1
synopsis:           An academic approach of Adversarial Search using Haskell.

-- description:
homepage:           https://github.com/Jastxz/Adversarial-Search-Haskell
license:
author:             Javier Gil Blázquez
maintainer:         javicraft14@gmail.com
copyright:          Copyright © 2022, Javier Gil Blázquez
category:           Game, AI
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:  Interaction
  other-modules:
    Funciones3enRaya
    FuncionesDamas
    FuncionesGato
    GuardarCargar
    Interconexion
    IO3enRaya
    IOdamas
    IOgato
    MiniMax
    Tipos
    Utiles
    UtilesGraficos

  build-depends:
    , async         ^>=2.2.4
    , base          ^>=4.16.4.0
    , deepseq       ^>=1.4.4.0
    , directory     ^>=1.3.6.0
    , filepath      ^>=1.4.2.1
    , gloss         ^>=1.13.2.2
    , matrix        ^>=0.3.6.1
    , random        ^>=1.2.1.1
    , regex-compat  ^>=0.95.2.1
    , split         ^>=0.2.3.4
    , time          ^>=1.9.3

  hs-source-dirs:   src
  default-language: Haskell2010

executable TFG
  main-is:          Main.hs
  build-depends:
    , base  ^>=4.16.4.0
    , TFG

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite TFG-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  build-depends:    base ^>=4.16.4.0
